--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <div class="main-header__rubber-top">
                     <nav class="main-nav">
                         <ul class="main-nav__list">
-                            <li class="main-nav__active-item">
+                            <li class="main-nav__list-item main-nav__list-item--active">
                                 <a href="#">Карта штата</a>
-                                <button class="main-header__toggle main-header_toggle--close-menu"></button>
+                                <button class="btn btn--close-menu"></button>
                             </li>
                             <li class="main-nav__list-item">
                                 <a href="#">Информация</a>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="main-header__rubber-bottom">
                     <a class="main-header__logo" href="#"><img src="#" alt="logo" /></a>
-                    <button class="main-header__toggle main-header_toggle--open-menu"></button>
+                    <button class="btn btn--open-menu"></button>
                     <div class="main-header__promo">
                         <img src="#" alt="promo" />
                     </div>
@@ -40,56 +40,56 @@
             </header>
 
             <article class="reasons">
-                <header class="reasons__header">
-                    <h1 class="reasons__header-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>    
-                    <p class="reasons__header-about">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</p>
+                <header class="reasons-header">
+                    <h1 class="reasons-header__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>    
+                    <p class="reasons-header__about">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</p>
                 </header>
-                <div class="reasons__reason-item">
-                    <h2 class="reasons__item-title">Настоящий городок</h2>
-                    <p class="reasons__item-number">- №1 -</p>
-                    <p class="reasons__item-about">Седона не атракцион для туристов, там течет своя жизнь</p>
+                <div class="reason-item reason-item--blue">
+                    <h2 class="reason-item__title">Настоящий городок</h2>
+                    <p class="reason-item__number">- №1 -</p>
+                    <p class="reason-item__about">Седона не атракцион для туристов, там течет своя жизнь</p>
                     <img src="" alt="img-reason-1" />
                 </div>  
-                <div class="reasons__reason-item reasons_reason-item--reason-img">
-                    <ul class="causes-list">
-                        <li class="causes-list__item">
+                <div class="reasons-wrapper">
+                    <ul class="reasons-list">
+                        <li class="reason-item reason-item--item">
                             <img src="" alt="house" />
-                            <h2 class="causes-list__title">Жилье</h2>
-                            <p class="causes-list__about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                            <h2 class="reason-item__title">Жилье</h2>
+                            <p class="reason-item__about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                         </li>
-                        <li class="causes-list__item">
+                        <li class="reason-item reason-item--item">
                             <img src="" alt="gift" />
-                            <h2 class="causes-list__title">Сувениры</h2>
-                            <p class="causes-list__about">Не только китайского, но и местного производства!</p>
+                            <h2 class="reason-item__title">Сувениры</h2>
+                            <p class="reason-item__about">Не только китайского, но и местного производства!</p>
                         </li>
-                        <li class="causes-list__item">
+                        <li class="reason-item reason-item--item">
                             <img src="" alt="food" />
-                            <h2 class="causes-list__title">Еда</h2>
-                            <p class="causes-list__about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>                
+                            <h2 class="reason-item__title">Еда</h2>
+                            <p class="reason-item__about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>                
                         </li>
                     </ul>
                 </div >
-                <div class="reasons__reason-item">
-                    <h2 class="reasons__item-title">Там есть мост Дьявола</h2>
-                    <p class="reasons__item-number">- №2 -</p>
-                    <p class="reasons__item-about">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                <div class="reason-item reason-item--blue">
+                    <h2 class="reason-item__title">Там есть мост Дьявола</h2>
+                    <p class="reason-item__number">- №2 -</p>
+                    <p class="reason-item__about">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
                     <img src="" alt="img-reason-2" />
                 </div>
-                <div class="reasons__reason-item reasons__reason-item--reason-grey">
-                    <div class="reasons__reason-item">
-                        <h2 class="reasons__item-title">Небольшая площадь</h2>
-                        <p class="reasons__item-number">- №3 -</p>
-                        <p class="reasons__item-about">Все достопримечательности находятся очень близко</p>
+                <div class="reasons-wrapper">
+                    <div class="reason-item reason-item--grey">
+                        <h2 class="reason-item__title">Небольшая площадь</h2>
+                        <p class="reason-item__number">- №3 -</p>
+                        <p class="reason-item__about">Все достопримечательности находятся очень близко</p>
                     </div>
-                    <div class="reasons__reason-item">
-                        <h2 class="reasons__item-title">Красивая дорога</h2>
-                        <p class="reasons__item-number">- №4 -</p>
-                        <p class="reasons__item-about">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                    <div class="reason-item reason-item--grey">
+                        <h2 class="reason-item__title">Красивая дорога</h2>
+                        <p class="reason-item__number">- №4 -</p>
+                        <p class="reason-item__about">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                     </div>
-                    <div class="reasons__reason-item">
-                        <h2 class="reasons__item-title">Мало туристов</h2>
-                        <p class="reasons__item-number">- №5 -</p>
-                        <p class="reasons__item-about">Большинство едет в Гранд Каньон и толпится там</p>
+                    <div class="reason-item reason-item--grey">
+                        <h2 class="reason-item__title">Мало туристов</h2>
+                        <p class="reason-item__number">- №5 -</p>
+                        <p class="reason-item__about">Большинство едет в Гранд Каньон и толпится там</p>
                     </div>
                 </div>
             </article>
@@ -99,7 +99,7 @@
                     <p class="hotels__header-title">Заинтересовались?</p>
                     <p class="hotels__header-about">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>          
                 </header>
-                <h2 class="hotels__search-title">Поиск гостиницы в Седоне</h2>
+                <h2 class="btn btn--search">Поиск гостиницы в Седоне</h2>
                 <div class="search-hotel">
                     <form class="search-hotel__form" action="/echo" method="post">
                         <label class="search-hotel__label" for="in">Дата заезда:</label>
@@ -118,7 +118,7 @@
                             <input class="search-hotel__input" type="text" id="children" class="count" value="0">
                             <button class="search-hotel__control search-hotel__control--plus"></button>
                         </div>
-                        <button class="search-hotel__btn search-hotel__btn--submit" type="submit" value="Найти"></button>
+                        <button class="btn btn--submit" type="submit" value="Найти"></button>
                     </form>
                 </div>
             </section>
@@ -130,10 +130,10 @@
                     <p class="main-footer__hashtag">
                         #VISITSEDONA
                     </p>
-                    <div class="social-btns">
-                        <a class="social-btns__btn social-btns__btn--twitter" href="#"></a>
-                        <a class="social-btns__btn social-btns__btn--facebook" href="#"></a>
-                        <a class="social-btns__btn social-btns__btn--youtube" href="#"></a>
+                    <div class="social">
+                        <a class="social__btn social__btn--twitter" href="#"></a>
+                        <a class="social__btn social__btn--facebook" href="#"></a>
+                        <a class="social__btn social__btn--youtube" href="#"></a>
                     </div>
                     <div class="main-footer__links-copyright">
                         Website by 
