Версия 0.5. Добавил закрытие/открытие меню, формы поиска отеля, и убрал мелкие баги.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Landing Page</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>HTML Academy: Sedona</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
@@ -36,11 +37,9 @@
                 </div>
                 <div class="main-header__rubber-bottom">
                     <div class="main-header__logo-line">
-                    	<center>
-                    		<svg class="main-header__logo--bg" width="137px" height="70.778px" viewBox="0 0 137 70.778" enable-background="new 0 0 137 70.778">
+                    		<svg class="main-header__logo--bg" width="137px" height="71px">
 	<path d="M137,0h-14.173H14.173H0l31.279,35.161l0,0 l27.8,31.249c5.182,5.824,13.66,5.824,18.842,0l27.8-31.249l0,0L137,0z"/>
-							</svg>
-						</center>					
+							</svg>		
 						<a class="main-header__logo" href="index.html">
 							<img 
 								src="img/logo-sedona@1x.png"
@@ -65,11 +64,9 @@
 							<a class="main_header__tablet main-header__tablet--href main-header__tablet--active" href="#">Информация</a>
 							<a class="main_header__tablet main-header__tablet--href" href="#">Фото и видео</a>
 							<div class="logo-tablet">
-								<center>
 									<svg class="logo-tablet__bg" width="137px" height="70.778px" viewBox="0 0 137 70.778" enable-background="new 0 0 137 70.778">
 			<path d="M137,0h-14.173H14.173H0l31.279,35.161l0,0 l27.8,31.249c5.182,5.824,13.66,5.824,18.842,0l27.8-31.249l0,0L137,0z"/>
 									</svg>
-								</center>	
 							<a class="main-header__logo" href="index.html">
 								<img 
 									src="img/logo-sedona@1x.png"
@@ -486,7 +483,7 @@
                     <p class="hotels__header-about">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
                     <p class="hotels__header-about--tablet">Укажите предполагаемые даты поездки<br /> и мы покажем вам лучшие предложения гостиниц в Седоне</p>      
                 </header>
-				<center><button class="btn btn--search">Поиск гостиницы в Седоне</button></center>
+				<button class="btn btn--search">Поиск гостиницы в Седоне</button>
                 <div class="search-hotel">
                     <form class="search-hotel__form" action="" method="">
                         <label class="search-hotel__label" for="in">Дата заезда:</label>
